--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
         <header class="text-center text-light my-4">
           <h1 class="mb-4">Todo List</h1>
+          <h3 class="mb-6">CRUD application</h3>
+          <p>(create, read, update, delete)</p>
           <form class="search">
             <input class="form-control m-auto" type="text" name="search" placeholder="search todos" />
           </form>
