--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </ul>
     
         <form class="add text-center my-4">
-          <label class="text-light">Add to do </label>
+          <label class="text-white">Add to do </label>
           <input class="form-control m-auto" type="text" name="add" />
         </form>
     
