--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
           <label class="text-white">Add to do </label>
           <input class="form-control m-auto" type="text" name="add" />
         </form>
-    
+        <a href="https://dylanbozarth.com" class="text-center">Back to portfolio</a>
       </div>
-
 
     <script src="app.js"></script>
 </body>
